[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openloss"
version = "0.0.1"
description = "Cost functions designed for open-set classification tasks, published in well-known peer-reviewed venues."
keywords = ["openloss", "open set", "open-set learning", "cost function"]
readme = "README.md"

requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
]

authors = [
  { name="Rafael Vareto", email="rafael@vareto.com.br" },
]

[project.urls]
Homepage = "https://github.com/rafaelvareto/maximal-entropy-loss"
Issues = "https://github.com/rafaelvareto/maximal-entropy-loss/issues"

[tool.setuptools]
    zip-safe = false
    package-dir = {"" = "src"}
